[gd_scene load_steps=14 format=3 uid="uid://bgoh6a1lrox41"]

[ext_resource type="Script" path="res://script/automaton/Automaton.gd" id="1_028qb"]
[ext_resource type="PackedScene" uid="uid://x6jc7ssxss70" path="res://script/automaton/spell_component.tscn" id="2_6hoxx"]
[ext_resource type="PackedScene" uid="uid://0q6v4cqts8je" path="res://script/automaton/movement_component.tscn" id="3_d7mmq"]
[ext_resource type="PackedScene" uid="uid://cr430xnai7fa2" path="res://dragable_component.tscn" id="4_jg3nk"]
[ext_resource type="Script" path="res://script/automaton/AutoClock.gd" id="5_ovrlc"]
[ext_resource type="PackedScene" uid="uid://drvdx7nb727rf" path="res://script/automaton/monster_mesh.tscn" id="6_jo8pj"]
[ext_resource type="Texture2D" uid="uid://w7lyiijri2xb" path="res://ui/hp_over.png" id="7_yy5mb"]
[ext_resource type="Texture2D" uid="uid://cqi4guy5g67v8" path="res://ui/hp_prog.png" id="8_g8kp3"]
[ext_resource type="Script" path="res://script/automaton/HpBar.gd" id="9_aj2yc"]
[ext_resource type="Texture2D" uid="uid://bqfyh3vthijpj" path="res://ui/mana_progt.png" id="10_1jkqf"]
[ext_resource type="Script" path="res://script/automaton/ManaBar.gd" id="11_0quwe"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ec7p5"]

[sub_resource type="ViewportTexture" id="ViewportTexture_yruud"]
viewport_path = NodePath("SubViewport")

[node name="Automaton" type="Node3D"]
script = ExtResource("1_028qb")
SpellComponent = ExtResource("2_6hoxx")

[node name="MovementComponent" parent="." instance=ExtResource("3_d7mmq")]

[node name="DragableComponent" parent="." instance=ExtResource("4_jg3nk")]

[node name="Clock" type="Timer" parent="."]
script = ExtResource("5_ovrlc")

[node name="ControlTimer" type="Timer" parent="."]
one_shot = true

[node name="LockTimer" type="Timer" parent="."]

[node name="MonsterMesh" parent="." instance=ExtResource("6_jo8pj")]

[node name="Hitbox" type="Area3D" parent="."]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_ec7p5")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(180, 80)

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="SubViewport/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
value = 100.0
texture_over = ExtResource("7_yy5mb")
texture_progress = ExtResource("8_g8kp3")
script = ExtResource("9_aj2yc")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="SubViewport/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 20.0
texture_over = ExtResource("7_yy5mb")
texture_progress = ExtResource("10_1jkqf")
script = ExtResource("11_0quwe")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0549028, 1.3192, -0.148109)
billboard = 1
texture = SubResource("ViewportTexture_yruud")

[connection signal="hp_changed" from="." to="SubViewport/VBoxContainer/TextureProgressBar" method="_on_automaton_hp_changed"]
[connection signal="mana_changed" from="." to="SubViewport/VBoxContainer/TextureProgressBar2" method="_on_automaton_mana_changed"]
